[tool.poetry]
name = "app"
version = "1.0.0"
description = "Expense Service by NA"
authors = ["naman.singh <naman.singh@kickdrum.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.116.0"
uvicorn = { version = "^0.34.2", extras = ["standard"] }
jinja2 = "^3.1.3"
openpyxl = "^3.1.2"
gspread = "^6.2.1"
oauth2client = "^4.1.3"
pydantic_core = "2.16.3"
typing_inspection = "^0.4.1"
pydantic = "2.6.4"
annotated-types = "^0.7.0"
anyio = "^4.9.0"
google-auth = "^2.40.3"
google-auth-oauthlib = "^1.2.0"
requests = "^2.32.3"
urllib3 = "^2.5.0"
python-multipart = "^0.0.6"
click = "^8.1.7"
h11 = "^0.14.0"
certifi = "^2025.7.9"
charset-normalizer = "^3.4.2"
python-dotenv = "^1.1.1"
colorama = "^0.4.6"
httpx = "^0.27.2"
httpcore = "^1.0.7"

[tool.poetry.dev-dependencies]
markupsafe = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "codeartifact-prod"
url = "https://pypi.org/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "codeartifact-dev"
url = "https://pypi.org/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"
